tests/purs/failing/AnonArgument2.out
Error found:
at tests/purs/failing/AnonArgument2.purs:7:16 - 7:17 (line 7, column 16 - line 7, column 17)

  An anonymous function argument appears in an invalid context.


See https://github.com/purescript/documentation/blob/master/errors/IncorrectAnonymousArgument.md for more information,
or to contribute content related to this error.

